--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -107,7 +107,7 @@ jobs:
         env-type: ${{ fromJson(needs.setup.outputs.matrix) }}
         env-name: [Biomage]
         should-run:
-          - ${{ contains(needs.setup.outputs.matrix, "production")}}
+          - ${{ contains(fromJson(needs.setup.outputs.matrix), production) }}
         include:
           - env-name: HMS
             env-type: production
