only notify for master

--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -312,7 +312,7 @@ jobs:
     name: Report if workflow failed
     runs-on: ubuntu-20.04
     needs: [setup, get-modified-templates, lint-templates, deploy-templates, setup-rds-roles]
-    if: failure()
+    if: failure() && github.ref == 'refs/heads/master'
     steps:
       - id: send-to-slack
         name: Send failure notification to Slack on failure
