don't deploy to hms unless production is specified

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -109,7 +109,7 @@ jobs:
         env-type: ${{ fromJson(needs.setup.outputs.matrix) }}
         env-name: [Biomage]
         should-run:
-          - ${{ contains(fromJson(needs.setup.outputs.matrix), production) }}
+          - ${{ contains(github.ref, 'use-environment-secrets') }}
         include:
           - env-name: HMS
             env-type: production
