don't deploy to hms unless production is specified

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -109,12 +109,12 @@ jobs:
         env-type: ${{ fromJson(needs.setup.outputs.matrix) }}
         env-name: [Biomage]
         should-run:
-          - ${{ contains(github.ref, 'use-environment-secrets') }}
+          - ${{ contains(github.ref, 'refs/heads/use-environment-secrets') }}
         include:
           - env-name: HMS
             env-type: production
             should-run: false
-    if: github.event.inputs.workflow_actions == 'deploy and configure' && ${{ matrix.should-run }}
+    if: github.event.inputs.workflow_actions == 'deploy and configure' && matrix.should-run
     steps:
       - id: print-stuff
         name: print to test how this works
