--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -109,11 +109,11 @@ jobs:
         env-type: ${{ fromJson(needs.setup.outputs.matrix) }}
         env-name: [Biomage]
         should-run:
-          - ${{ contains(github.ref, 'refs/heads/use-environment-secrets') }}
+          - ${{ contains(github.ref, 'refs/heads/use-environment-secretssssss') }}
         exclude:
           - env-name: HMS
             env-type: production
-            should-run: true
+            should-run: false
     if: github.event.inputs.workflow_actions == 'deploy and configure'
     steps:
       - id: print-stuff
