the if was a problem

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -22,7 +22,7 @@ env:
 
 # this ensures that only one CI pipeline with the same key
 #  can run at once in order to prevent undefined states
-concurrency: cluster-update-mutex-bla
+concurrency: cluster-update-mutex
 
 jobs:
   setup:
@@ -110,8 +110,8 @@ jobs:
         env-name: [Biomage, HMS]
         exclude:
           - env-name: HMS
-            env-type: staging
-    if: github.event.inputs.workflow_actions == 'deploy and configure'
+            env-type: production
+    # if: github.event.inputs.workflow_actions == 'deploy and configure'
     steps:
       - id: print-stuff
         name: print to test how this works
