--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       matrix:
         environment-name: [Biomage]
-    environment: ${{ matrix.env-name }}
+    environment: ${{ matrix.environment-name }}
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
@@ -101,7 +101,7 @@ jobs:
     runs-on: ubuntu-20.04
     needs: setup
     env:
-      CLUSTER_ENV: ${{ matrix.env-type }}
+      CLUSTER_ENV: ${{ matrix.environment-type }}
     strategy:
       matrix:
         environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
