--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -106,6 +106,7 @@ jobs:
       matrix:
         environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
         environment-name: [Biomage]
+        max-parallel: 1
     # if: github.event.inputs.workflow_actions == 'deploy and configure'
     steps:
       - id: checkout
@@ -120,17 +121,17 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.region }}
 
-      - id: install-yq
-        name: Install yq for modifying the eksctl yaml spec.
-        run: |-
-          sudo wget https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
+      # - id: install-yq
+      #   name: Install yq for modifying the eksctl yaml spec.
+      #   run: |-
+      #     sudo wget https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
 
-      - id: fill-metadata
-        name: Add name and region to the eksctl file.
-        run: |-
-          yq w infra/cluster.yaml metadata.name "biomage-$CLUSTER_ENV" | yq w - metadata.region ${{ env.region }} > /tmp/cluster-$CLUSTER_ENV.yaml
-          cat /tmp/cluster-$CLUSTER_ENV.yaml
-          echo /tmp/cluster-$CLUSTER_ENV.yaml
+      # - id: fill-metadata
+      #   name: Add name and region to the eksctl file.
+      #   run: |-
+      #     yq w infra/cluster.yaml metadata.name "biomage-$CLUSTER_ENV" | yq w - metadata.region ${{ env.region }} > /tmp/cluster-$CLUSTER_ENV.yaml
+      #     cat /tmp/cluster-$CLUSTER_ENV.yaml
+      #     echo /tmp/cluster-$CLUSTER_ENV.yaml
 
   #     - id: install-eksctl
   #       name: Install eksctl
