--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -121,6 +121,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.region }}
 
+      - id: test-fail-staging
+        name: test step that fails staging and checks if prod will still run
+        run |-
+          if [matrix.environment-type = 'staging']; then
+             echo 'this is staging, I am gonna fail'
+             ERROR=true
+          fi
+          if [ ! -z "$ERROR" ]
+          then
+            echo
+            echo ERRORORRRRRR
+            exit 1
+          fi
+
       # - id: install-yq
       #   name: Install yq for modifying the eksctl yaml spec.
       #   run: |-
