--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -124,7 +124,7 @@ jobs:
       - id: test-fail-staging
         name: test step that fails staging and checks if prod will still run
         run: |-
-          if [matrix.environment-type = 'staging']; then
+          if ["$CLUSTER_ENV" = 'staging']; then
              echo 'this is staging, I am gonna fail'
              ERROR=true
           fi
