--- a/.github/workflows/deploy-changed-users.yaml
+++ b/.github/workflows/deploy-changed-users.yaml
@@ -19,6 +19,10 @@ jobs:
   check-secrets:
     name: Check if secrets are defined
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
+        environment-name: [Biomage]
     steps:
       - id: check-secrets
         name: Check if necessary secrets are installed.
@@ -55,10 +59,12 @@ jobs:
     name: Updates Kubernetes user-related resources on the EKS cluster
     runs-on: ubuntu-20.04
     strategy:
+      max-parallel: 1
       matrix:
-        environment: ['production', 'staging']
+        environment-type: ['production', 'staging']
+        environment-name: [Biomage]
     env:
-      CLUSTER_ENV: ${{ matrix.environment }}
+      CLUSTER_ENV: ${{ matrix.environment-type }}
       API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
     steps:
       - id: checkout
@@ -99,8 +105,8 @@ jobs:
         name: Deploy AWS Step Function (state machine) roles
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          parameter-overrides: "Environment=${{ matrix.environment }}"
-          name: "biomage-state-machine-role-${{ matrix.environment }}"
+          parameter-overrides: "Environment=${{ matrix.environment-type }}"
+          name: "biomage-state-machine-role-${{ matrix.environment-type }}"
           template: 'infra/cf-state-machine-role.yaml'
           capabilities: 'CAPABILITY_IAM,CAPABILITY_NAMED_IAM'
           no-fail-on-empty-changeset: "1"
