--- a/.github/workflows/backup-cognito-users.yaml
+++ b/.github/workflows/backup-cognito-users.yaml
@@ -12,6 +12,7 @@ jobs:
   backup-users:
     name: create backup of cognito users
     runs-on: ubuntu-20.04
+    environment: Biomage
     steps:
       - id: setup-node
         uses: actions/setup-node@v2
