--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -25,78 +25,78 @@ env:
 concurrency: cluster-update-mutex
 
 jobs:
-  setup:
-    name: Check secrets and set up matrix
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        environment-name: [Biomage]
-    environment: ${{ matrix.environment-name }}
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - id: check-secrets
-        name: Check if necessary secrets are installed.
-        run: |-
-          echo Checking if secrets are defined in the repository.
+  # setup:
+  #   name: Check secrets and set up matrix
+  #   runs-on: ubuntu-20.04
+  #   strategy:
+  #     matrix:
+  #       environment-name: [Biomage]
+  #   environment: ${{ matrix.environment-name }}
+  #   outputs:
+  #     matrix: ${{ steps.set-matrix.outputs.matrix }}
+  #   steps:
+  #     - id: check-secrets
+  #       name: Check if necessary secrets are installed.
+  #       run: |-
+  #         echo Checking if secrets are defined in the repository.
 
-          if [ -z "${{ secrets.ACM_CERTIFICATE_ARN}}" ]
-          then
-            echo AWS certificate ARN is not defined.
-            ERROR=true
-          fi
+  #         if [ -z "${{ secrets.ACM_CERTIFICATE_ARN}}" ]
+  #         then
+  #           echo AWS certificate ARN is not defined.
+  #           ERROR=true
+  #         fi
 
-          if [ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" ]
-          then
-            echo AWS Access Key ID not defined.
-            ERROR=true
-          fi
+  #         if [ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" ]
+  #         then
+  #           echo AWS Access Key ID not defined.
+  #           ERROR=true
+  #         fi
 
-          if [ -z "${{ secrets.AWS_SECRET_ACCESS_KEY }}" ]
-          then
-            echo AWS Secret Access Key not defined.
-            ERROR=true
-          fi
+  #         if [ -z "${{ secrets.AWS_SECRET_ACCESS_KEY }}" ]
+  #         then
+  #           echo AWS Secret Access Key not defined.
+  #           ERROR=true
+  #         fi
 
-          if [ -z "${{ secrets.API_TOKEN_GITHUB }}" ]
-          then
-            echo GitHub deploy key access token not defined.
-            ERROR=true
-          fi
+  #         if [ -z "${{ secrets.API_TOKEN_GITHUB }}" ]
+  #         then
+  #           echo GitHub deploy key access token not defined.
+  #           ERROR=true
+  #         fi
 
-          if [ -z "${{ secrets.PRIMARY_DOMAIN_NAME }}" ]
-          then
-            echo Secret PRIMARY_DOMAIN_NAME is not set in repository secrets. Make sure this secret exists in the repository secrets.
-            ERROR=true
-          fi
+  #         if [ -z "${{ secrets.PRIMARY_DOMAIN_NAME }}" ]
+  #         then
+  #           echo Secret PRIMARY_DOMAIN_NAME is not set in repository secrets. Make sure this secret exists in the repository secrets.
+  #           ERROR=true
+  #         fi
 
-          if [ -z "${{ secrets.DOMAIN_NAME }}" ]
-          then
-            echo Secret DOMAIN_NAME is not set in repository secrets. Make sure this secret exists in the repository secrets.
-            ERROR=true
-          fi
+  #         if [ -z "${{ secrets.DOMAIN_NAME }}" ]
+  #         then
+  #           echo Secret DOMAIN_NAME is not set in repository secrets. Make sure this secret exists in the repository secrets.
+  #           ERROR=true
+  #         fi
 
-          if [ ! -z "$ERROR" ]
-          then
-            echo
-            echo This workflow requires some secrets to complete. If the missing secrets are any of: 
-            echo API_TOKEN_GITHUB, AWS_SECRET_ACCESS_KEY, AWS_ACCESS_KEY_ID,
-            echo then you should set/rotate them by running "rotate-ci" from "biomage-utils".
-            echo Any other missing secrets have to be added manually.
-            exit 1
-          fi
-      - id: set-matrix
-        name: Set up cluster matrix
-        run: |-
-          if [ "${CLUSTER}" = "staging" ]; then
-            echo '::set-output name=matrix::["staging"]'
-          elif [ "${CLUSTER}" = "production" ]; then
-            echo '::set-output name=matrix::["production"]'
-          elif [ "${CLUSTER}" = "staging and production" ]; then
-            echo '::set-output name=matrix::["staging", "production"]'
-          fi
-        env:
-          CLUSTER: ${{ github.event.inputs.cluster }}
+  #         if [ ! -z "$ERROR" ]
+  #         then
+  #           echo
+  #           echo This workflow requires some secrets to complete. If the missing secrets are any of: 
+  #           echo API_TOKEN_GITHUB, AWS_SECRET_ACCESS_KEY, AWS_ACCESS_KEY_ID,
+  #           echo then you should set/rotate them by running "rotate-ci" from "biomage-utils".
+  #           echo Any other missing secrets have to be added manually.
+  #           exit 1
+  #         fi
+  #     - id: set-matrix
+  #       name: Set up cluster matrix
+  #       run: |-
+  #         if [ "${CLUSTER}" = "staging" ]; then
+  #           echo '::set-output name=matrix::["staging"]'
+  #         elif [ "${CLUSTER}" = "production" ]; then
+  #           echo '::set-output name=matrix::["production"]'
+  #         elif [ "${CLUSTER}" = "staging and production" ]; then
+  #           echo '::set-output name=matrix::["staging", "production"]'
+  #         fi
+  #       env:
+  #         CLUSTER: ${{ github.event.inputs.cluster }}
 
   create-eks-cluster:
     name: Create EKS cluster
@@ -190,7 +190,7 @@ jobs:
   configure-cluster:
     name: Configure Kubernetes resources (Load Balancer Controller, flux, Helm) on the EKS cluster
     runs-on: ubuntu-20.04
-    needs: [setup, create-eks-cluster]
+    # needs: [setup, create-eks-cluster]
     if: always() && (needs.create-eks-cluster.result == 'success' || needs.create-eks-cluster.result == 'skipped')
     env:
       CLUSTER_ENV: ${{ matrix.environment-type }}
@@ -204,6 +204,11 @@ jobs:
       - id: checkout
         name: Check out source code
         uses: actions/checkout@v2
+
+      - id: print-stuff
+        name: Print some things
+        run: |-
+           echo ${{ matrix.environment-name }}
 
       - id: setup-aws
         name: Configure AWS credentials
