--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -101,7 +101,7 @@ jobs:
   create-eks-cluster:
     name: Create EKS cluster
     runs-on: ubuntu-20.04
-    # needs: setup
+    needs: setup
     env:
       CLUSTER_ENV: ${{ matrix.environment-type }}
     strategy:
@@ -188,7 +188,7 @@ jobs:
           eksctl delete iamserviceaccount --config-file=/tmp/cluster-$CLUSTER_ENV.yaml --only-missing --approve
 
   configure-cluster:
-    name: Configure Kubernetes resources (Load Balancer Controller, flux, Helm) on the EKS cluster
+    name: Configure Kubernetes resources on the EKS cluster
     runs-on: ubuntu-20.04
     needs: [setup, create-eks-cluster]
     if: always() && (needs.create-eks-cluster.result == 'success' || needs.create-eks-cluster.result == 'skipped')
